--- a/conf/conf_test2.ini
+++ b/conf/conf_test2.ini
@@ -1,4 +1,4 @@
-[default]
+
 path1= c:/go
 version1 = 1.44
 
@@ -7,4 +7,8 @@ num2 =	666
 something2  = right  #注释1
 #fdfdfd = fdfdfd    注释整行
 refer2= refer       //注释3
-rand4 =   wewewewew
+rand4 =   #wewewewew
+
+rand5 # =   wewewewew
+rand6  =   wewewewew
+rand7 =   wewewewew #swerfwr
